--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title>DateTime Field compatibility test page</title>
 	<meta name="author" content="Sebastian Tilders" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style>
 	* {
 		font-family: "Tahoma", sans-serif;
@@ -50,7 +50,7 @@
 		font-family: monospace;
 		color:  #888;
 	}
-	@media screen and (min-width: 720px) {
+	@media screen and (min-width: 500px) {
 		div.container {
 			display: block;
 			margin: auto;
@@ -67,9 +67,9 @@
 			padding: 0px;
 		}
 	}
-	@media screen and (min-width: 720px) {
+	@media screen and (min-width: 500px) {
 		div.container {
-			font-size:102% !important;	
+			font-size:100% !important;	
 		}
 	}
 	@media screen and (min-width: 960px) {
