bug fix for week input

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 		</tr>
 		<tr>
 			<td><label for="test-week">Week</label></td>
-			<td><input type="test-week" id="test-week" name="test-week" /></td>
+			<td><input type="week" id="test-week" name="test-week" /></td>
 			<td id="test-week-value"><code><i>Empty string</i></code></td>
 		</tr>
 		<tr>
